# qdrant-rust-backend

./: .gitignore  Cargo.toml  README.md  SYNTAX_GUIDE.md  convert_to_onnx.py  download_weights.sh  package.json  performance_analysis.md  pyproject.toml  requirements.txt
.specstory/history/: rust-program-for-image-embeddings-and-qdrant.md
examples/: upload_images.rs
src/: lib.rs  main.rs
